auto-test/tests/chapter_18/invalid_parse/empty_initializer_list.c



struct s {int a;};

int main(void) {
    struct s foo = {};
    return 0;
}